cabal-version: 3.0
name:          th-process
version:       0.0.1
synopsis:      Run external processes verified at compilation
description:   The library checks program name during compilation,
               generates exec spec to be verified in tests, before installation
               or before launch.

homepage:      http://github.com/yaitskov/th-process
license:       BSD-3-Clause
author:        Daniil Iaitskov
maintainer:    dyaitskov@gmail.com
copyright:     Daniil Iaitkov 2025
category:      System
build-type:    Simple
bug-reports:   https://github.com/yaitskov/th-process/issues
source-repository head
  type:
    git
  location:
    https://github.com/yaitskov/th-process.git

common base
  default-language: GHC2024
  ghc-options: -Wall
  default-extensions:
    DefaultSignatures
    NoImplicitPrelude
    OverloadedStrings
    TemplateHaskell
  build-depends:
      HList
    , QuickCheck
    , base >=4 && <5
    , bytestring
    , generic-lens
    , lens
    , refined
    , relude
library
  import: base
  hs-source-dirs: src
  exposed-modules:
    System.Process.Th
    System.Process.Th.CallEffect
    System.Process.Th.CallArgument
    System.Process.Th.CallSpec
    System.Process.Th.CallSpec.Subcases
    System.Process.Th.CallSpec.Type
    System.Process.Th.CallSpec.Verify
    System.Process.Th.OrphanArbitrary
    System.Process.Th.Predicate
    System.Process.Th.Predicate.ImplDir
    System.Process.Th.Predicate.InDir
    System.Process.Th.Predicate.InFile
    System.Process.Th.Predicate.Regex
    System.Process.Th.Prelude
    System.Process.Th.Pretty
    System.Process.Th.Sbv.Arbitrary
    System.Process.Th.TdfaToSbvRegex
  build-depends:
      casing
    , conduit
    , conduit-find
    , containers
    , directory
    , filepath
    , generic-random
    , mtl
    , pretty
    , process
    , regex-compat
    , regex-tdfa
    , safe-exceptions
    , sbv
    , template-haskell
    , temporary
    , th-utilities
    , trace-embrace
    , unix

test-suite verify-call-specs
  import: base
  type: exitcode-stdio-1.0
  main-is: VerifyCallSpecs.hs
  other-modules:
    CallSpecs.Find
    CallSpecs.Find.Type
  hs-source-dirs:
    verify-call-specs
  ghc-options: -Wall -rtsopts -threaded -main-is VerifyCallSpecs
  build-depends: th-process

test-suite sandbox-effect
  import: base
  type: exitcode-stdio-1.0
  main-is: SandBoxEffect.hs
  other-modules:
    CallSpecs.CpOne
    CallSpecs.CpManyToDir
    CallSpecs.FindCases
  hs-source-dirs:
    sandbox-effect
  ghc-options: -Wall -rtsopts -threaded -main-is SandBoxEffect
  build-depends: th-process

test-suite test
  import: base
  type: exitcode-stdio-1.0
  main-is: Driver.hs
  other-modules:
    Discovery
    System.Process.Th.Test.CallSpec
    System.Process.Th.Test.CallSpec.Const
    System.Process.Th.Test.CallSpec.VarArg
    System.Process.Th.Test.CallSpec.VarArg.Refined
    System.Process.Th.Test.Prelude
    System.Process.Th.Test.Th
    Paths_th_process
  autogen-modules:
    Paths_th_process
  hs-source-dirs:
    test
  ghc-options: -Wall -rtsopts -threaded -main-is Driver
  build-depends:
      directory
    , quickcheck-instances
    , th-utilities
    , tasty
    , tasty-discover
    , tasty-hunit
    , tasty-quickcheck
    , template-haskell
    , temporary
    , th-lift-instances
    , th-process
    , unliftio
